--- a/Lab03-03.ipynb
+++ b/Lab03-03.ipynb
@@ -137,7 +137,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. ทดลองสร้างหน้าต่าง login"
+    "## 6. ทดลองสร้างโปรแกรมบวกเลขสองจำนวน "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13. สร้างโปรเจค windows form ใหม่ ให้ชื่อว่า FormAdd\n",
+    "\n",
+    "    13.1 ใน terminal ถ้ายังอยู่ใน folder ของโปรเจค HelloForm1 พิมพ์คำสั่ง `cd ..` เพื่อย้ายโฟลเดอร์ที่ทำงานออกมาจาก  HelloForm1\n",
+    "    \n",
+    "    13.2 ใน terminal พิมพ์ `dotnet new winforms -n FormAdd -o FormAdd`\n",
+    "\n",
+    "    13.3 ใน terminal ย้ายเข้าไปทำงานในโฟลเดอร์  FormAdd โดยพิมพ์คำสั่ง `cd FormAdd`\n",
+    "\n",
+    "14. "
    ]
   }
  ],
