--- a/Lab03-03.ipynb
+++ b/Lab03-03.ipynb
@@ -250,9 +250,9 @@
     "Controls.Add(label_B);\n",
     "```cs\n",
     "\n",
-    "___หมายเหตุ___  \n",
+    "__หมายเหตุ__  \n",
     "\n",
-    "การเพิ่ม Controls ต่าง ๆ  ไว้หลังจากบรรทัด __ResumeLayout(false);__ ก็ยังคงแสดงผลได้เช่นกัน แต่อาจจะเกิดการ update หน้าจอของโปรแกรมที่กระพริบได้ \n",
+    "การเพิ่ม Controls ต่าง ๆ  ไว้หลังจากบรรทัด ResumeLayout(false);  ก็ยังคงแสดงผลได้เช่นกัน แต่อาจจะเกิดการ update หน้าจอของโปรแกรมที่กระพริบได้ \n",
     "\n",
     "19.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "19.3 สังเกตุและบันทึกผล\n"
