--- a/Lab03-03.ipynb
+++ b/Lab03-03.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "19. เพิ่ม control ต่าง ๆ ให้ครบ  โดยเพิ่มถัดจากบรรทัด  __Controls.Add(label_A);__\n",
+    "19. เพิ่ม control ต่าง ๆ โดยเพิ่มถัดจากบรรทัด  __Controls.Add(label_A);__\n",
     "\n",
     "19.1 เพิ่ม Label_B\n",
     "\n",
@@ -255,7 +255,50 @@
     "การเพิ่ม Controls ต่าง ๆ  ไว้หลังจากบรรทัด ResumeLayout(false);  ก็ยังคงแสดงผลได้เช่นกัน แต่อาจจะเกิดการ update หน้าจอของโปรแกรมที่กระพริบได้ \n",
     "\n",
     "19.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
+    "\n",
     "19.3 สังเกตุและบันทึกผล\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20. เพิ่ม Label_B\n",
+    "\n",
+    "20.1 Code ทื่ต้องเพิ่ม\n",
+    "\n",
+    "```cs\n",
+    "label_C.AutoSize = true;\n",
+    "label_C.Location = new Point(26, 112);\n",
+    "label_C.Name = \"label_C\";\n",
+    "label_C.Size = new Size(15, 15);\n",
+    "label_C.Text = \"C\";\n",
+    "Controls.Add(label_C);\n",
+    "```\n",
+    "\n",
+    "20.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
+    "\n",
+    "20.3 สังเกตุและบันทึกผล\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "21. เพิ่ม Label_B\n",
+    "\n",
+    "21.1 Code ทื่ต้องเพิ่ม\n",
+    "\n",
+    "```cs\n",
+    "textBox_A.Location = new Point(46, 20);\n",
+    "textBox_A.Name = \"textBox_A\";\n",
+    "textBox_A.Size = new Size(100, 23);\n",
+    "Controls.Add(textBox_A);\n",
+    "```\n",
+    "\n",
+    "21.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
+    "\n",
+    "21.3 สังเกตุและบันทึกผล"
    ]
   }
  ],
