--- a/Lab03-03.ipynb
+++ b/Lab03-03.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "19. เพิ่ม control ต่าง ๆ โดยเพิ่มถัดจากบรรทัด  __Controls.Add(label_A);__\n",
+    "#### 19. เพิ่ม control ต่าง ๆ โดยเพิ่มถัดจากบรรทัด  __Controls.Add(label_A);__\n",
     "\n",
     "19.1 เพิ่ม Label_B\n",
     "\n",
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20. เพิ่ม Label_B\n",
+    "#### 20. เพิ่ม Label_B\n",
     "\n",
     "20.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "21. เพิ่ม Label_B\n",
+    "#### 21. เพิ่ม textBox_A\n",
     "\n",
     "21.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
@@ -299,6 +299,48 @@
     "21.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "\n",
     "21.3 สังเกตุและบันทึกผล"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Todo Next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 22. เพิ่ม textBox_B\n",
+    "\n",
+    "22.1 Code ทื่ต้องเพิ่ม\n",
+    "\n",
+    "```cs\n",
+    "textBox_A.Location = new Point(46, 20);\n",
+    "textBox_A.Name = \"textBox_A\";\n",
+    "textBox_A.Size = new Size(100, 23);\n",
+    "Controls.Add(textBox_A);\n",
+    "```\n",
+    "\n",
+    "22.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
+    "\n",
+    "22.3 สังเกตุและบันทึกผล"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 23. เพิ่ม textBox_C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 24. เพิ่ม buttonAdd"
    ]
   }
  ],
