--- a/Lab03-03.ipynb
+++ b/Lab03-03.ipynb
@@ -305,23 +305,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "Todo Next"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 22. เพิ่ม textBox_B\n",
     "\n",
     "22.1 Code ทื่ต้องเพิ่ม\n",
     "\n",
     "```cs\n",
-    "textBox_A.Location = new Point(46, 20);\n",
-    "textBox_A.Name = \"textBox_A\";\n",
-    "textBox_A.Size = new Size(100, 23);\n",
-    "Controls.Add(textBox_A);\n",
+    "textBox_B.Location = new Point(46, 49);\n",
+    "textBox_B.Name = \"textBox_B\";\n",
+    "textBox_B.Size = new Size(100, 23);\n",
+    "Controls.Add(textBox_B);\n",
     "```\n",
     "\n",
     "22.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
@@ -333,7 +325,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 23. เพิ่ม textBox_C"
+    "#### 23. เพิ่ม textBox_C\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "23.1 Code ทื่ต้องเพิ่ม\n",
+    "\n",
+    "```cs\n",
+    "textBox_C.Location = new Point(46, 108);\n",
+    "textBox_C.Name = \"textBox_C\";\n",
+    "textBox_C.Size = new Size(100, 23);\n",
+    "Controls.Add(textBox_C);\n",
+    "```\n",
+    "23.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
+    "\n",
+    "23.3 สังเกตุและบันทึกผล"
    ]
   },
   {
@@ -341,6 +350,25 @@
    "metadata": {},
    "source": [
     "#### 24. เพิ่ม buttonAdd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "24.1 Code ทื่ต้องเพิ่ม\n",
+    "\n",
+    "```cs\n",
+    "buttonAdd.Location = new Point(59, 79);\n",
+    "buttonAdd.Name = \"buttonAdd\";\n",
+    "buttonAdd.Size = new Size(75, 23);\n",
+    "buttonAdd.Text = \"Add\";\n",
+    "Controls.Add(buttonAdd);\n",
+    "```\n",
+    "\n",
+    "24.2 รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
+    "\n",
+    "24.3 สังเกตุและบันทึกผล\n"
    ]
   }
  ],
