--- a/Lab03-03.ipynb
+++ b/Lab03-03.ipynb
@@ -370,6 +370,36 @@
     "\n",
     "24.3 สังเกตุและบันทึกผล\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 25 เพิ่ม Event ให้ปุ่ม buttonAdd\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "25.1 ในไฟล์ Form1.Designer.cs ให้เพิ่มบรรทัดนี้ไว้ล่าง `Controls.Add(buttonAdd);`  \n",
+    "\n",
+    "```cs\n",
+    "buttonAdd.Click += buttonAdd_Click;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "25.2 ในไฟล์ Form1.cs  ให้เพิ่มเมธอด `buttonAdd_Click()` ไว้ใต้เมธอด `public Form1()`\n",
+    "\n",
+    "```cs\n",
+    "private void buttonAdd_Click(object sender, EventArgs e)\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "25.3 ฺ  พิมพ์คำสั่ง dotnet build ใน terminal ต้องไม่มี error ใดๆ ถ้ามีให้แก้ให้ถูกต้อง "
+   ]
   }
  ],
  "metadata": {
