--- a/Lab03-03.ipynb
+++ b/Lab03-03.ipynb
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16. เพิ่ม code สำหรับการแสดงผล โดยจะเพิ่มต่อเนื่องลงไปด้านล่างตามลำดับ\n",
+    "16.1 เพิ่ม code สำหรับการแสดงผลบน windows form โดยจะเพิ่มต่อเนื่องลงไปด้านล่างตามลำดับ\n",
     "\n",
     "ให้เพิ่ม code สำหรับการสร้าง object ที่จะวางบน windows form  ไว้ถัดลงมาจากบรรทัด   `this.Text = \"Form1\";`\n",
     "\n",
@@ -198,13 +198,13 @@
     "\n",
     "```cs\n",
     "// สร้าง object ของ controls ที่จะวางบน form\n",
-    "Button buttonAdd = new Button();\n",
-    "Label label_A = new Label();\n",
-    "Label label_B= new Label();\n",
-    "Label label_C= new Label();\n",
-    "TextBox textBox_A = new TextBox();\n",
-    "TextBox textBox_B = new TextBox();\n",
-    "TextBox textBox_C = new TextBox();\n",
+    "buttonAdd = new Button();\n",
+    "label_A = new Label();\n",
+    "label_B= new Label();\n",
+    "label_C= new Label();\n",
+    "textBox_A = new TextBox();\n",
+    "textBox_B = new TextBox();\n",
+    "textBox_C = new TextBox();\n",
     "\n",
     "// หยุดการแสดงผลบน form ชั่วคราว (freeze) โดยคำสั่ง SuspendLayout(); \n",
     "// เพื่อไม่ให้เกิดการกระพริบในระหว่างที่เพิ่ม control ทีละตัว\n",
@@ -228,6 +228,24 @@
     "ResumeLayout(false);\n",
     "PerformLayout();\n",
     "```\n",
+    "\n",
+    "16.2 เพิ่มตัวแปร reference ของตัวแปรบน  windows form ไว้ก่อนบรรทัด #endregion \n",
+    "\n",
+    "__หมายเหตุ__\n",
+    "นอกจากการสร้าง object ในเมธอด private void InitializeComponent() แล้ว \n",
+    "เราจำเป็นต้องเพิ่มตัวแปร reference ของ controls ไว้ในฐานะสมาชิกของคลาส Form1 ด้วย \n",
+    "มิฉะนั้นจะไม่สามารถเรียกใช้จากส่วนอื่นของคลาสได้ \n",
+    "\n",
+    "```cs \n",
+    "Button buttonAdd;\n",
+    "Label label_A;\n",
+    "Label label_B;\n",
+    "Label label_C;\n",
+    "TextBox textBox_A;\n",
+    "TextBox textBox_B;\n",
+    "TextBox textBox_C;\n",
+    "```\n",
+    "\n",
     "\n",
     "17. รันโปรแกรม โดยพิมพ์  `dotnet run` ใน terminal\n",
     "18. สังเกตุและบันทึกผล"
@@ -394,11 +412,38 @@
     "```cs\n",
     "private void buttonAdd_Click(object sender, EventArgs e)\n",
     "{\n",
-    "\n",
+    "    double a, b, c;\n",
+    "    double.TryParse(textBox_A.Text, out a);\n",
+    "    double.TryParse(textBox_B.Text, out b);\n",
+    "    c = a + b;\n",
+    "    textBox_C.Text = c.ToString();\n",
     "}\n",
     "```\n",
     "\n",
     "25.3 ฺ  พิมพ์คำสั่ง dotnet build ใน terminal ต้องไม่มี error ใดๆ ถ้ามีให้แก้ให้ถูกต้อง "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 26 รันโปรแกรมและทดสอบการทำงาน\n",
+    "\n",
+    "26.1 พิมพ์คำสั่ง dotnet run ใน terminal \n",
+    "\n",
+    "26.2 ใส่ตัวเลขใน textbox A  และ B แล้วกดปุ่ม Add บันทึกผลที่ได้"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## คำถาม\n",
+    "1. ถ้าไม่ใส่ตัวเลขใดๆ เลย ทั้งช่อง A และ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "2. ถ้าไม่ตัวเลขใดเฉพาะช่อง A แต่ไม่ใส่ในช่อง B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "3. ถ้าไม่ตัวเลขใดเฉพาะช่อง B แต่ไม่ใส่ในช่อง A แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n"
    ]
   }
  ],
