--- a/Lab03-03-WindowForm-Application.ipynb
+++ b/Lab03-03-WindowForm-Application.ipynb
@@ -23,8 +23,8 @@
     "\n",
     "ก่อนทำการทดลอง ให้ตรวจสอบให้แน่ใจว่าเครื่องคอมพิวเตอร์ได้ติดตั้งซอฟต์แวร์ต่อไปนี้แล้ว\n",
     "\n",
-    "- Visual Studio Code พร้อม \n",
-    "- extension C# Dev Kit บน Visual Studio Code (ใช้สำหรับการสร้าง project) \n",
+    "- Visual Studio Code  \n",
+    "- ติดตั้ง extension C# Dev Kit บน Visual Studio Code (ใช้สำหรับการสร้าง project) \n",
     "- .NET 8 SDK."
    ]
   },
@@ -52,6 +52,10 @@
     "## 2. Create Application\n",
     "\n",
     "1. เปิด visual studio code \n",
+    "\n",
+    "__หมายเหตุ__\n",
+    "   เนื่องจากไม่มีตัวเลือกในการสร้าง .net project จากเมนู View->Command Palette... จึงต้องใช้ terminal ในการสร้างและทดสอบโปรเจค\n",
+    "\n",
     "2. เปิด terminal โดยใช้เมนู view->terminal หรือกด Ctrl + Shift + ` \n",
     "\n",
     "   2.1 ตรวจสอบว่าเป็น folder ที่จะสร้าง project ไว้ในนั้นจริง ๆ  \n",
