--- a/Lab03-04-Blazor-Server-Application.ipynb
+++ b/Lab03-04-Blazor-Server-Application.ipynb
@@ -112,6 +112,59 @@
     "10. บันทึกไฟล์\n",
     "11. สังเกตุการเปลี่ยนแปลงและบันทึกหน้าจอ"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. เพิ่ม razor page (blazor component)\n",
+    "\n",
+    "12. พิมพ์คำสั่ง `dotnet new list razorcomponent`  ใน terminal เพื่อตรวจสอบว่ามี template สำหรับการสร้าง razor component ติดตั้งไว้หรือยัง \n",
+    "\n",
+    "13. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Components/Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้งอสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
+    "14. เปิดไฟล์ Components/Layout/NavMenu.razor เพื่อเพิ่ม link ที่หน้า navigation มายัง component ที่สร้างขึ้น\n",
+    "15. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา\n",
+    "16. แก้ไข href และ ข้อความ link เมื่อแก้ไขแล้วจะเป็นดังนี้ \n",
+    "\n",
+    "```razor\n",
+    "<div class=\"top-row ps-3 navbar navbar-dark\">\n",
+    "    <div class=\"container-fluid\">\n",
+    "        <a class=\"navbar-brand\" href=\"\">BlazorServer1</a>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "<input type=\"checkbox\" title=\"Navigation menu\" class=\"navbar-toggler\" />\n",
+    "\n",
+    "<div class=\"nav-scrollable\" onclick=\"document.querySelector('.navbar-toggler').click()\">\n",
+    "    <nav class=\"flex-column\">\n",
+    "        <div class=\"nav-item px-3\">\n",
+    "            <NavLink class=\"nav-link\" href=\"\" Match=\"NavLinkMatch.All\">\n",
+    "                <span class=\"bi bi-house-door-fill-nav-menu\" aria-hidden=\"true\"></span> Home\n",
+    "            </NavLink>\n",
+    "        </div>\n",
+    "\n",
+    "        <div class=\"nav-item px-3\">\n",
+    "            <NavLink class=\"nav-link\" href=\"counter\">\n",
+    "                <span class=\"bi bi-plus-square-fill-nav-menu\" aria-hidden=\"true\"></span> Counter\n",
+    "            </NavLink>\n",
+    "        </div>\n",
+    "\n",
+    "        <div class=\"nav-item px-3\">\n",
+    "            <NavLink class=\"nav-link\" href=\"weather\">\n",
+    "                <span class=\"bi bi-list-nested-nav-menu\" aria-hidden=\"true\"></span> Weather\n",
+    "            </NavLink>\n",
+    "        </div>\n",
+    "\n",
+    "        <div class=\"nav-item px-3\">\n",
+    "            <NavLink class=\"nav-link\" href=\"adder\">\n",
+    "                <span class=\"bi bi-list-nested-nav-menu\" aria-hidden=\"true\"></span> Adder\n",
+    "            </NavLink>\n",
+    "        </div>\n",
+    "\n",
+    "    </nav>\n",
+    "</div>\n",
+    "```    "
+   ]
   }
  ],
  "metadata": {
