--- a/Lab03-04-Blazor-Server-Application.ipynb
+++ b/Lab03-04-Blazor-Server-Application.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "12. พิมพ์คำสั่ง `dotnet new list razorcomponent`  ใน terminal เพื่อตรวจสอบว่ามี template สำหรับการสร้าง razor component ติดตั้งไว้หรือยัง \n",
     "\n",
-    "13. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Components/Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้งอสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
+    "13. พิมพ์คำสั่ง `dotnet new razorcomponent -n Adder -o Components/Pages` ใน terminal เพื่อสร้าง razor component โดยจะต้องสร้างไว้ในที่เดียวกับ component อื่นๆ \n",
     "14. เปิดไฟล์ Components/Layout/NavMenu.razor เพื่อเพิ่ม link ที่หน้า navigation มายัง component ที่สร้างขึ้น\n",
     "15. คัดลอกบล็อกของ code สำหรับลิงค์ (บรรทัดที่ 23 - 27) แล้ววางลงใต้บล็อกที่ copy มา\n",
     "16. แก้ไข href และ ข้อความ link เมื่อแก้ไขแล้วจะเป็นดังนี้ \n",
@@ -163,7 +163,31 @@
     "\n",
     "    </nav>\n",
     "</div>\n",
-    "```    "
+    "```    \n",
+    "\n",
+    "17. พิมพ์คำสั่ง `dotnet watch` ใน terminal เพื่อรันโปรแกรม\n",
+    "18. สังเกตุหน้าเพจ ว่ามีเมนูใหม่เกิดขึ้นหรือไม่ ถ้ามี ให้ทดลองคลิกที่ลิงค์นั้น"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1 แก้ไขหน้า razor component ให้รองรับการกด link\n",
+    "19. เปิดไฟล์ Components/Pages/Adder.razor\n",
+    "20. เพิ่ม code สำหรับการเรียก route ไว้ในบรรทัดแรก เมื่อเพิ่มแล้วจะได้เนื้อหาในไฟล์เป็นดังนี้\n",
+    "```r\n",
+    "@page \"/adder\"\n",
+    "\n",
+    "<h3>Adder</h3>\n",
+    "\n",
+    "@code {\n",
+    "\n",
+    "}\n",
+    "```\n",
+    "21. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
+    "22. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
+    "23. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
    ]
   }
  ],
