--- a/Lab03-04-Blazor-Server-Application.ipynb
+++ b/Lab03-04-Blazor-Server-Application.ipynb
@@ -189,6 +189,92 @@
     "22. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
     "23. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 เพิ่ม code การบวกเลขสองจำนวนลงใน razor component\n",
+    "24. เปิดไฟล์  Components/Pages/Adder.razor\n",
+    "25. เปลี่ยน code ทั้งหมดในไฟล์เป็นตาม code ด้านล่างนี้\n",
+    "\n",
+    "```r\n",
+    "@page \"/adder\"\n",
+    "@rendermode InteractiveServer\n",
+    "<h3>Adder</h3>\n",
+    "<style>\n",
+    "    .btAdd {\n",
+    "        position: relative;\n",
+    "        left: 100px;\n",
+    "        height: 40px;\n",
+    "        width: 80px;\n",
+    "    }\n",
+    "\n",
+    "    .canvas {\n",
+    "        width: 300px;\n",
+    "        height: 300px;\n",
+    "        background-color: lightcyan;\n",
+    "        float: left;\n",
+    "        position: relative;\n",
+    "    }\n",
+    "</style>\n",
+    "\n",
+    "<div class=\"canvas\">\n",
+    "    <p> A:<input id=\"Text1\" @bind=\"A\" type=\"text\"> </p>\n",
+    "    <p> B:<input id=\"Text2\" @bind=\"B\" type=\"text\" /> </p>\n",
+    "    <p> <button @onclick=\"AddValues\" class=\"btAdd\"> @Label </button> </p>\n",
+    "    <p> C:<input id=\"Text3\" @bind=\"C\" type=\"text\" /> </p>\n",
+    "</div>\n",
+    "\n",
+    "@code {\n",
+    "    string Label = \"Add\";\n",
+    "    double A, B, C;\n",
+    "    private void AddValues()\n",
+    "    {\n",
+    "        C = A + B;\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "26. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
+    "27. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
+    "28. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 เพิ่ม razor component การบวกเลขสองจำนวนลงในหน้า home page\n",
+    "29. เปิดไฟล์  Components/Pages/Home.razor เพื่อแก้ไขหน้า Homepage\n",
+    "30. แก้ไข Code ของหน้า Homepage ให้เป็นดังนี้\n",
+    "\n",
+    "```r\n",
+    "@page \"/\"\n",
+    "\n",
+    "<PageTitle>Home</PageTitle>\n",
+    "\n",
+    "<Adder> </Adder>\n",
+    " \n",
+    "``` \n",
+    "\n",
+    "31. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
+    "32. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
+    "33. สังเกตุและบันทึกผลการทดลอง\n",
+    "34. ทดลองคลิกที่เมนู Adder สังเกตุและบันทึกผลการทดลอง\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## คำถาม\n",
+    "1. ถ้าไม่ใส่ตัวเลขใดๆ เลย ทั้งช่อง A และ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "2. ถ้าไม่ตัวเลขใดเฉพาะช่อง A แต่ไม่ใส่ในช่อง B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "3. ถ้าไม่ตัวเลขใดเฉพาะช่อง B แต่ไม่ใส่ในช่อง A แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
+    "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น"
+   ]
   }
  ],
  "metadata": {
