--- a/Lab03-04-Blazor-Server-Application.ipynb
+++ b/Lab03-04-Blazor-Server-Application.ipynb
@@ -245,18 +245,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 เพิ่ม razor component การบวกเลขสองจำนวนลงในหน้า home page\n",
+    "### 5.3 เพิ่ม razor component การบวกเลขสองจำนวนลงในหน้า home page\n",
     "29. เปิดไฟล์  Components/Pages/Home.razor เพื่อแก้ไขหน้า Homepage\n",
     "30. แก้ไข Code ของหน้า Homepage ให้เป็นดังนี้\n",
     "\n",
-    "```r\n",
-    "@page \"/\"\n",
-    "\n",
-    "<PageTitle>Home</PageTitle>\n",
-    "\n",
-    "<Adder> </Adder>\n",
-    " \n",
-    "``` \n",
+    ">    ```r\n",
+    ">    @page \"/\"\n",
+    ">\n",
+    ">    <PageTitle>Home</PageTitle>\n",
+    ">\n",
+    ">    <Adder> </Adder>\n",
+    ">    \n",
+    ">    ``` \n",
     "\n",
     "31. ตรวจสอบใน terminal ว่า server ยังรันอยู่หรือไม่ ถ้ายังรันอยู่ ให้กด Ctrl+C เนื่องจากการเพิ่มเส้นทาง (route) ไปยัง resource ต่างๆ ต้องทำการ upload ส่วนที่เป็น core ของ server ขึ้นไปใหม่ ไม่สามารถทำเพียงแค่ hot reload ได้\n",
     "32. เมื่อ server หยุดการทำงานแล้ว ให้พิมพ์คำสั่ง `dotnet watch` ใน terminal อีกครั้งเพื่อรันโปรแกรม\n",
